# video-policy-test

./: .gitignore  README.md  pyproject.toml
patches/: mimic-video-a100-uv.patch
results/libero_object/20260706T013340Z_object_full/: RUN.md  episodes.jsonl  summary.json
scripts/: setup_lambda.sh  setup_system.sh
src/video_policy_test/: __init__.py  cli.py  libero_runner.py  policy.py  viewer.py
src/video_policy_test/backends/: __init__.py  mimic_video.py
tests/: test_cli.py  test_mimic_video.py
