[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-policy-test"
version = "0.1.0"
description = "Modular video-policy evaluation on robot-learning benchmarks"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["numpy>=1.26,<2"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
video-policy = "video_policy_test.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/video_policy_test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
